2007-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (make-variable-frame-localizable): Remove.
	(make-variable-frame-local): Mark obsolete.

2007-10-23  Juanma Barranquero  <lekktu@gmail.com>

	* ibuf-ext.el (ibuffer-switch-to-saved-filters)
	(ibuffer-switch-to-saved-filter-groups): Doc fixes.

2007-10-23  Chris Moore  <christopher.ian.moore@gmail.com>

	* comint.el (comint-password-prompt-regexp):
	Handle `[sudo] password'-style prompt.

2007-10-23  Glenn Morris  <rgm@gnu.org>

	* progmodes/f90.el (f90-do-indent, f90-if-indent)
	(f90-type-indent, f90-program-indent)
	(f90-continuation-indent, f90-comment-region)
	(f90-beginning-ampersand, f90-smart-end)
	(f90-break-before-delimiters, f90-auto-keyword-case)
	(f90-leave-line-no, f90-mode-hook):
	Give an appropriate safe-local-variable property.
	(f90-font-lock-keywords-2): Fix `go to' regexp.

	* progmodes/fortran.el (fortran-tab-mode-default)
	(fortran-tab-mode-string, fortran-do-indent, fortran-if-indent)
	(fortran-structure-indent, fortran-continuation-indent)
	(fortran-comment-indent, fortran-comment-line-extra-indent)
	(fortran-comment-line-start)
	(fortran-minimum-statement-indent-fixed)
	(fortran-minimum-statement-indent-tab)
	(fortran-comment-indent-char, fortran-line-number-indent)
	(fortran-check-all-num-for-matching-do)
	(fortran-blink-matching-if, fortran-continuation-string)
	(fortran-comment-region, fortran-electric-line-number)
	(fortran-column-ruler-fixed, fortran-column-ruler-tab)
	(fortran-analyze-depth, fortran-break-before-delimiters):
	Give an appropriate safe-local-variable property.

2007-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/tex-mode.el (tex-uptodate-p): Don't signal an error if one
	of the subdirs is unreadable.

2007-10-22  Martin Rudalics  <rudalics@gmx.at>

	* progmodes/fortran.el (fortran-mode-map, fortran-window-create):
	Use window-full-width-p.

2007-10-22  Stefan Monnier  <monnier@iro.umontreal.ca>
